# dnc_project

./: .dockerignore  .gitignore  config.yaml  docker-compose.yml
dnc_backend/: .env  Cargo.toml  Dockerfile  Dockerfile_backend  LOG.md  README.md  login_test.http
dnc_backend/billing_templates/: Claims Template.numbers  Claims Template.xlsx  HMO_Billing_Template.xlsx  RetainerFee Template.numbers  RetainerFee Template.xlsx  Utilization_Report_Template.xlsx
dnc_backend/data_input/: dentists_2026.xlsx
dnc_backend/migration/: Cargo.toml
dnc_backend/migration/src/: lib.rs  m20251205_063628_create_table_dataobject.rs  m20251205_075427_create_table_permission.rs  m20251205_075435_create_table_role.rs  m20251205_075445_create_table_role_permission.rs  m20251205_075454_create_table_user.rs  m20251221_124454_create_table_dental_services.rs  m20251221_124505_create_table_clinic_capabilities.rs  m20260108_051749_create_table_hmo.rs  m20260119_112338_create_table_dentist_contract.rs  m20260119_112532_create_table_dentist_contract_service_rates.rs  m20260119_131647_add_dentist_contract_permission_and_role_permissions.rs  m20260126_063012_create_tables_dental_clinic.rs  m20260126_151643_add_dental_clinic_permission_and_role_permissions.rs  m20260126_161604_create_table_dentists.rs  m20260129_023740_insert_dentist_and_dental_clinics_from_xlsx.rs  (+49 more)
dnc_backend/src/: db.rs  lib.rs  main.rs
dnc_backend/src/entities/: city.rs  (+54 more)
dnc_backend/tests/: clinic_capabilities.rs  data_objects.rs  dental_services.rs  health_check.rs  hmos.rs  login.rs  role_permissions.rs  roles.rs  users.rs
(+503 files in other folders)
