[package]
name = "dnc_backend"
version = "0.1.0"
edition = "2024"


[workspace]
members=[".", "migration"]

[dependencies]
migration={path="migration"}
axum = "0.8.7"
tokio = { version="1.48.0", features = ["full"] }
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
dotenvy = "0.15.7"
sea-orm = { version="2.0.0-rc.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
log = "0.4.28"
argon2 = "0.5.3"
password-hash = "0.5.0"
jsonwebtoken = { version="10", features = ["rust_crypto"] }
chrono = "0.4.42"
