[package]
name = "dnc_backend"
version = "0.1.0"
edition = "2024"


[workspace]
members=[".", "migration"]

[dependencies]
migration={path="migration"}
axum = "0.8.7"
tokio = { version="1.48.0", features = ["full"] }
serde = {version="1.0.228", features = ["derive"]}
dotenvy = "0.15.7"
sea-orm = { version="2.0.0-rc.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
log = "0.4.28"
argon2 = "0.5.3"
password-hash = "0.5.0"
jsonwebtoken = { version="10", features = ["rust_crypto"] }
chrono = "0.4.42"
tower-http = { version="0.6.8" , features = ["cors", "trace"]}
http = "1.4.0"
tracing = "0.1.43"
tracing-subscriber = { version="0.3.22", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.4"
reqwest = { version = "0.12.26", features = ["json"] }
